# EasyAgents

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: main.py  pyproject.toml
backend/app/: models.py
backend/app/agents/: builder.py  runner.py
backend/app/api/: runs.py  tools.py  ws.py
backend/app/graph/: validator.py
backend/app/session/: store.py
backend/app/tools/: tools.py
backend/tests/: test_models.py  test_validator.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  templates.ts
frontend/src/components/Canvas/: AgentEdge.tsx  AgentNode.tsx  Canvas.tsx
frontend/src/components/CustomSelect/: CustomSelect.tsx
frontend/src/components/LogDrawer/: LogDrawer.tsx  index.ts
frontend/src/components/NodePanel/: NodePanel.tsx
frontend/src/components/RunBar/: RunBar.tsx  index.ts
frontend/src/components/TopBar/: TopBar.tsx
frontend/src/hooks/: useRunWebSocket.ts  useTools.ts
frontend/src/store/: graphStore.ts  runStore.ts
frontend/src/types/: index.ts
